--- a/style.css
+++ b/style.css
@@ -147,3 +147,7 @@ input:checked+.slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+.modal .badge {
+    --bs-badge-font-weight: 500;
+}
