--- a/components/billing/billing.html
+++ b/components/billing/billing.html
@@ -1,19 +1,16 @@
 <div class="row  g-2">
-  <!-- row-cols-1 row-cols-sm-2 row-cols-md-3 -->
-  <div ng-repeat="bill in bills" class="col-12 col-sm-6 col-md-4 d-flex">
-    <div class="card flex-stretch">
-      <div class="card-body row">
-        <h5 class="card-title col-8">${{bill.price}}</h5>
-        <span class="text-end col-4">
-          <button type="button" class="btn-close" ng-click="removeBill(bill.reference)"></button>
-        </span>
-        <div class="card-text border rounded-top">
-          <span class="col-3 border-end pe-2 d-inline-block">Mode</span>
-          <span class="col-8 d-inline-block">{{bill.paymentMode}}</span>
-        </div>
-        <div class="card-text border rounded-bottom">
-          <span class="col-3 d-inline-block">Ref.</span>
-          <span class="col-8 d-inline-block text-truncate">{{bill.reference}}</span>
+  <div ng-repeat="bill in bills" class="col-12 col-sm-6 col-lg-4">
+    <div class="card flex-stretch custom bg-card shadow-sm">
+      <div class="card-header d-flex justify-content-between">
+        <h2 class="card-title mb-0">${{bill.price}}</h2>
+        <button type="button" class="btn-close" ng-click="removeBill(bill.reference)"></button>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <span class="col-3">Mode</span>
+          <span class="col-9">{{bill.paymentMode}}</span>
+          <span class="col-3">Ref.</span>
+          <span class="col-9 text-truncate">{{bill.reference}}</span>
         </div>
       </div>
     </div>
