Email time and bug fix
fix variable name overlap
keep timezone data in createEmail request

--- a/components/email/email.html
+++ b/components/email/email.html
@@ -58,7 +58,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" ng-click="addEmail()">Add Email</button>
+                <button type="button" class="btn btn-primary" ng-click="createEmail()">Add Email</button>
             </div>
         </div>
     </div>
